# django-asklens

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/scripts/: wheel-smoke.sh  wheel_smoke.py
.github/workflows/: ci.yml
django_asklens/: __init__.py  access.py  admin.py  admin_querying.py  apps.py  exceptions.py  models.py  permissions.py  querying.py  settings.py
django_asklens/api/: __init__.py  permissions.py  querying.py  serializers.py  urls.py  views.py
django_asklens/catalog/: __init__.py  capabilities.py  introspection.py  registry.py  resources.py
django_asklens/compiler/: __init__.py  aggregations.py  dates.py  filters.py  orm.py
django_asklens/execution/: __init__.py  runner.py
django_asklens/frontend/: __init__.py  urls.py  views.py
django_asklens/llms/: __init__.py  base.py  dummy.py  factory.py  openai_compatible.py
django_asklens/mcp/: __init__.py  core.py  fastmcp.py  tools.py  wrappers.py
django_asklens/migrations/: 0001_initial.py  0002_add_admin_query_proxy.py
django_asklens/planning/: __init__.py  help.py  intents.py  optimization.py  planner.py  prompts.py  responses.py  schemas.py  validation.py
django_asklens/renderers/: __init__.py  charts.py  tables.py
django_asklens/results/: __init__.py  serialization.py  visualization.py
django_asklens/templates/admin/django_asklens/asklensquery/: change_list.html
django_asklens/templates/django_asklens/frontend/: query.html
docs/: core-python-api.md  custom-ui.md  demo-queries.md  evaluation.md  index.md  installation.md  mcp-integration.md  multitenancy-security.md  production-checklist.md  providers.md  registration.md  security-checklist.md  test-project-demo.md  usage.md
examples/mcp/: README.md  generic_toolset.py
tests/: conftest.py  test_admin_access.py  test_import_boundaries.py  test_optional_drf.py  test_scaffold.py
tests/api/: test_complex_tenant_permissions.py  test_multitenant_security.py  test_views.py
tests/catalog/: test_capabilities.py  test_registry.py
tests/compiler/: test_orm.py
tests/evaluation/: golden_cases.md  test_golden_cases.py  test_live_api_openai_compatible.py  test_live_openai_compatible.py
tests/llms/: test_openai_compatible.py
tests/mcp/: _support.py  conftest.py  test_core.py  test_tools.py  test_wrappers.py
tests/planning/: test_help.py  test_intents.py  test_planner.py  test_responses.py  test_schemas.py  test_validation.py
tests/renderers/: test_charts.py  test_tables.py
tests/results/: test_serialization.py  test_visualization.py
tests/test_project/: admin.py  apps.py  asklens_registry.py  demo_asgi.py  demo_settings.py  demo_urls.py  demo_views.py  mcp.py  mcp_server.py  models.py  permissions.py  settings.py  test_demo_frontend.py  test_demo_settings.py  test_mcp_example.py  test_mcp_server.py  test_seed_complex_project.py  test_validate_live_demo_command.py  urls.py
tests/test_project/management/: __init__.py
tests/test_project/management/commands/: __init__.py  seed_complex_test_project.py  validate_live_asklens_demo.py
tests/test_project/templates/test_project/: asklens_demo.html
