[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-asklens"
version = "0.1.0a0"
description = "Safe natural-language querying over explicitly registered Django models."
readme = "README.md"
requires-python = ">=3.12"
license = "BSD-3-Clause"
authors = [
    { name = "Revaz Zakalashvili", email = "revaz.zakalashvili@gmail.com" },
]
keywords = [
    "analytics",
    "business-intelligence",
    "data-exploration",
    "django",
    "django-orm",
    "django-rest-framework",
    "drf",
    "generative-ai",
    "llm",
    "multi-tenant",
    "natural-language-query",
    "openai-compatible",
    "orm",
    "pydantic",
    "python",
    "query-builder",
    "reporting",
    "semantic-layer",
    "text-to-query",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "Django>=5.2,<7.0",
    "pydantic>=2,<3",
]

[project.optional-dependencies]
api = [
    "djangorestframework>=3.17,<4.0",
]
mcp = [
    "fastmcp>=3.4,<4",
]

[project.urls]
Homepage = "https://github.com/revazi/django-asklens"
PyPI = "https://pypi.org/project/django-asklens/"
Documentation = "https://github.com/revazi/django-asklens/tree/main/docs"
Repository = "https://github.com/revazi/django-asklens"
Issues = "https://github.com/revazi/django-asklens/issues"
Changelog = "https://github.com/revazi/django-asklens/blob/main/CHANGELOG.md"
"Security Policy" = "https://github.com/revazi/django-asklens/security/policy"

[dependency-groups]
dev = [
    "build>=1",
    "djangorestframework>=3.17,<4.0",
    "fastmcp>=3.4,<4",
    "mypy>=1.13",
    "pytest>=8",
    "pytest-django>=4.9",
    "ruff>=0.8",
    "twine>=5",
    "uvicorn>=0.35,<1",
]

[tool.setuptools.packages.find]
include = ["django_asklens*"]

[tool.setuptools.package-data]
django_asklens = ["templates/**/*.html"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.test_project.settings"
python_files = ["test_*.py"]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
